Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville_area = None\n",
+    "greenville_area = list(greenville.values())[0]\n",
     "greenville_area # 68"
    ]
   },
