--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "greenville_population = list(greenville.values())[3]\n",
+    "greenville_population = greenville\n",
     "greenville_population # 84554"
    ]
   },
