Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -87,13 +87,13 @@
        "84554"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "greenville_population = greenville['Populatoi']\n",
+    "greenville_population = greenville['Population']\n",
     "greenville_population # 84554"
    ]
   },
@@ -121,7 +121,7 @@
     }
    ],
    "source": [
-    "greenville_area = list(greenville.values())[0]\n",
+    "greenville_area = greenv\n",
     "greenville_area # 68"
    ]
   },
