--- a/index.ipynb
+++ b/index.ipynb
@@ -348,22 +348,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_values(['Los Cabos', 'Mexico', 287651, 3750])"
+       "{'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 287651, 'Area': 3750}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "los_cabos_pop = cities[3].values()\n",
+    "los_cabos_pop = cities[3][]\n",
     "los_cabos_pop # 287651"
    ]
   },
